# GarbageCollector

./: CMakeLists.txt  README.md  RUN.md  config.h  main.c  virtual_machine.c  virtual_machine.h  vm_object.c  vm_object.h
test/: test_vm.c
vm/src/: config.h  virtual_machine.c  virtual_machine.h  vm_metaspace.c  vm_metaspace.h  vm_object.c
